--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1q2q3q
-spring.jpa.show-sql = false
+#spring.jpa.show-sql = false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
@@ -16,11 +16,11 @@ spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=900
 server.port=8000
 
-spring.mvc.hiddenmethod.filter.enabled=true
+#spring.mvc.hiddenmethod.filter.enabled=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # logging level
-#logging.level.org.springframework=ERROR
-#logging.level.com.stbegradleapp=DEBUG
+logging.level.org.springframework=ERROR
+logging.level.com.stbegradleapp=DEBUG
 #
 # output to a file
 #logging.file.name=app.log
