add CRUD for order --need fix edit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1q2q3q
-#spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
@@ -13,14 +13,16 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 #need read about this properties added to fix error bad SQL grammar [DELETE FROM SPRING_SESSION WHERE EXPIRY_TIME < ?]
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+spring.data.rest.base-path=/api
 spring.session.timeout.seconds=900
-server.port=8000
+server.port=8050
 
 #spring.mvc.hiddenmethod.filter.enabled=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # logging level
-logging.level.org.springframework=ERROR
+#logging.level.org.springframework=DEBUG
 logging.level.com.stbegradleapp=DEBUG
+#logging.level.org.postgresql=DEBUG
 #
 # output to a file
 #logging.file.name=app.log
