--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.4.0-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+//	id 'org.siouan.frontend' version '1.1.0'
+	id 'org.siouan.frontend-jdk11' version '5.3.0'
 }
 
 group = 'com.stbegradleapp'
@@ -14,10 +16,19 @@ configurations {
 	}
 }
 
+frontend {
+	nodeDistributionProvided = true
+	//nodeInstallDirectory = preinstalledNodeDistributionDirectory
+	assembleScript = 'run build'
+//	cleanScript = 'run clean'
+//	checkScript = 'run check'
+}
+
 repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
 	maven { url 'https://repo.spring.io/snapshot' }
+	gradlePluginPortal()
 }
 springBoot {
 	mainClass = "com.stbegradleapp.fixer.FixerApplication"
@@ -26,11 +37,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-groovy-templates'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+//	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version: '2.5.5'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'junit:junit:4.12'
+	implementation 'com.google.guava:guava:29.0-jre'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'joda-time:joda-time:2.10.6'
+	implementation 'org.apache.commons:commons-lang3:3.8.1'
 	compile 'org.springframework.data:spring-data-rest-webmvc:3.4.2'
 	compile 'com.github.spring-social:spring-social-google:latest.integration'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
