--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'joda-time:joda-time:2.10.6'
 	implementation 'org.apache.commons:commons-lang3:3.8.1'
-	compile 'org.springframework.data:spring-data-rest-webmvc:3.4.2'
+    implementation 'org.modelmapper:modelmapper:2.4.4'
+    compile 'org.springframework.data:spring-data-rest-webmvc:3.4.2'
 	compile 'com.github.spring-social:spring-social-google:latest.integration'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
