--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jersey'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
-	implementation 'junit:junit:4.12'
-	implementation 'com.google.guava:guava:29.0-jre'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'joda-time:joda-time:2.10.6'
 	implementation 'org.apache.commons:commons-lang3:3.8.1'
@@ -56,17 +54,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	implementation 'org.springframework.session:spring-session-jdbc'
-//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	implementation 'org.postgresql:postgresql'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//	implementation 'org.postgresql:postgresql'
+    implementation 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile 'org.webjars:bootstrap:4.5.3'
-//	compile group: 'org.webjars', name: 'bootstrap', version: '3.2.0'
-	testImplementation 'org.springframework.security:spring-security-test'
+
 }
 
 test {
